--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,21 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  
+}
+.gal-list {
+  flex-basis: calc((100% - 72px) / 4);
+  
+}
+.gal-link {
+  display: flex;
+  flex-direction: row;
+  font-size: 16px;
+ 
+}
+
